# diffusion-transformer

./: README.md  pyproject.toml
dit/: __init__.py  denoising_diffusion.py  edm_parameterization.py  score_model.py
experiments/cifar10/: checkpointer.py  config.py  create_folder_structure.sh  dataloader.py  main.py
experiments/mnist_sdf/: checkpointer.py  config.py  dataloader.py  main.py  main.sh
experiments/mnist_sdf/dit/: __init__.py  denoising_diffusion.py  parameterization.py
experiments/mnist_sdf/dit/nn/: dit.py  embedding.py
