[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "dit"
description = "A diffusion transformer implementation in Flax (DiT)"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "flax>=0.8.5",
    "optax>=0.2.3",
    "ml-collections>=0.1.1",
    "tensorflow>=2.17.0",
    "tensorflow-datasets>=4.9.6",
    "tensorflow-probability[jax]>=0.24.0",
    "einops>=0.8.0",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["dit"]

[tool.setuptools.dynamic]
version = {attr = "dit.__init__.__version__"}

[tool.rye]
managed = true
dev-dependencies = [
    "wandb>=0.17.7",
    "pre-commit>=3.8.0",
    "matplotlib>=3.9.2",
]

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607"]
